[package]
name = "freemap-tiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
crossbeam-deque = { version = "0.8.4" }
gdal = { version = "0.17.1", features = ["bindgen"] }
gdal-sys = "0.10.0"
image = { version = "0.25.5", default-features = false }
jpeg-encoder = "0.6.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
zstd = "0.13.2"
serde_json = "1.0.137"
serde = { version = "1.0.137", features = ["derive"] }
geo = { version = "0.29.3", features = ["proj"] }
geojson = "0.24.1"
proj = "0.27.0"

# [profile.release]
# debug = true
