[package]
name = "freemap-tiler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
crossbeam-deque = { version = "0.8.4" }
gdal = { version = "0.17.1", features = ["bindgen"] }
gdal-sys = "0.10.0"
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
jpeg-encoder = "0.6.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
zstd = "0.13.3"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
geo = { version = "0.29.3", features = ["proj"] }
geojson = "0.24.2"
proj = "0.27.0"
rayon = "1.10.0"
signal-hook = "0.3.17"
