[package]
name = "freemap-tiler"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
crossbeam-deque = { version = "0.8.4" }
gdal = { version = "0.18.0", features = ["bindgen"] }
gdal-sys = "0.11.0"
image = { version = "0.25.8", default-features = false, features = [
  "jpeg",
  "png",
] }
jpeg-encoder = "0.6.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
zstd = "0.13.3"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
geo = { version = "0.31.0", features = ["proj"] }
geojson = "0.24.2"
proj = "0.31.0"
rayon = "1.11.0"
signal-hook = "0.3.18"

[profile.release]
panic = 'abort'
